--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <meta charset="UTF-8" />
         <title>HTML</title>
     </head>
-    <body></body>
+    <body>
+        <h1>Анекдот</h1>
+        <h2>Про гвозди</h2>
+        <ul>
+            <li>
+                <a href="https://resheto.net/yumor/973-mam-a-gvozdi">Тык</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=izkTzr6MVDA">Тык</a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/watch?v=2SmEnjZE8Ss">Тык</a>
+            </li>
+        </ul>
+    </body>
 </html>
